--- a/index.html
+++ b/index.html
@@ -6,19 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Modal</title>
   </head>
+  <link rel="stylesheet" href="./src/base-css/variables.css" />
   <style></style>
   <script src="./src/ployfills/webcomponents-bundle.js"></script>
   <script src="./src/ployfills/custom-elements-es5-adapter.js"></script>
 
   <body>
-    <wheat-button>打开弹框</wheat-button>
+    <wheat-button
+      onclick="showModal()"
+      id="open"
+      type="line"
+      appearance="link"
+      href="pp"
+    >
+      <span slot="icon">+</span>
+      打开弹框
+    </wheat-button>
     <wheat-modal title="弹窗" visiable="false" maskCloseable="true">
       <div slot="content">
-        弹框内容
+        自定义弹框内容
       </div>
-      <!-- <div slot="modal-footer">
-        自定义footer
-      </div> -->
+      <div slot="content">
+        自定义弹框内容2
+      </div>
+      <div slot="wheat-modal-footer">
+        <wheat-button>自定义按钮</wheat-button>
+      </div>
     </wheat-modal>
   </body>
   <!-- <script src="./dist/wheat.ui.min.js"></script> -->
@@ -42,7 +55,7 @@
     const showModal = value => {
       MyModalDom.setAttribute('visiable', true)
     }
-    document.querySelector('wheat-button').onClick = value => {
+    document.querySelector('wheat-button').click = value => {
       console.log(value)
       MyModalDom.setAttribute('visiable', true)
     }
