--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       </div>
     </wheat-modal>
   </body>
-  <!-- <script src="./dist/wheat.ui.min.js"></script> -->
-  <script src="./src/button/index.js"></script>
-  <script src="./src/modal/index.js"></script>
+  <script src="./dist/wheat.ui.min.js"></script>
+  <!-- <script src="./src/button/index.js"></script>
+  <script src="./src/modal/index.js"></script> -->
   <script>
     const MyModalDom = document.querySelector('wheat-modal')
 
