--- a/src/button/demo.html
+++ b/src/button/demo.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Modal</title>
   </head>
+  <link rel="stylesheet" href="../base-css/variables.css" />
   <style></style>
 
   <body>
@@ -14,7 +15,7 @@
       打开弹框
     </wheat-button>
   </body>
-  <script src="./index.js"></script>
+  <script src="./button.js"></script>
   <script>
     document.querySelector('wheat-button').click = value => {
       console.log(value)
