--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     </wheat-modal>
     <wheat-input></wheat-input>
   </body>
-  <script src="./dist/wheat.ui.min.js"></script>
+  <!-- <script src="./dist/wheat.ui.min.js"></script> -->
   <!-- <script src="./src/button/index.js"></script>
   <script src="./src/modal/index.js"></script> -->
   <!-- <script src="./src/input/index.js"></script> -->
-  <!-- <script src="./dist/button.js"></script> -->
+  <script src="./dist/button.js"></script>
   <script>
     const MyModalDom = document.querySelector('wheat-modal')
 
