feat: webpack-html-plugin

--- a/src/button/index.html
+++ b/src/button/index.html
@@ -17,7 +17,7 @@
   </body>
   <script src="./button.js"></script>
   <script>
-    document.querySelector('wheat-button').click = value => {
+    document.querySelector('wheat-button').click = (value) => {
       console.log(value)
     }
   </script>
