feat: css-loader

--- a/src/button/index.html
+++ b/src/button/index.html
@@ -10,7 +10,7 @@
   <style></style>
 
   <body>
-    <wheat-button id="open" type="line" appearance="link" href="pp">
+    <wheat-button id="open">
       <span slot="icon">+</span>
       打开弹框
     </wheat-button>
