--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
     <wheat-button onclick="showModal()" id="open" type="line">
       打开弹框
     </wheat-button>
-    <wheat-modal title="弹窗" visiable="false" >
+    <wheat-modal title="弹窗" visiable="false">
       <div slot="content">
         自定义弹框内容
       </div>
       <div slot="content">
         自定义弹框内容2
       </div>
-     
     </wheat-modal>
     <wheat-input></wheat-input>
   </body>
@@ -34,7 +33,7 @@
   <script>
     const MyModalDom = document.querySelector('wheat-modal')
 
-    MyModalDom.addEventListener('onCancel', value => {
+    MyModalDom.addEventListener('onCancel', (value) => {
       const {
         detail: { visiable }
       } = value
@@ -42,14 +41,14 @@
       MyModalDom.setAttribute('visiable', visiable)
     })
 
-    MyModalDom.addEventListener('onConfirm', value => {
+    MyModalDom.addEventListener('onConfirm', (value) => {
       console.log('触发确定方法')
       MyModalDom.setAttribute('visiable', false)
     })
-    const showModal = value => {
+    const showModal = (value) => {
       MyModalDom.setAttribute('visiable', true)
     }
-    document.querySelector('wheat-button').click = value => {
+    document.querySelector('wheat-button').click = (value) => {
       console.log(value)
       MyModalDom.setAttribute('visiable', true)
     }
