--- a/index.html
+++ b/index.html
@@ -49,4 +49,18 @@
       MyModalDom.setAttribute('visiable', true)
     }
   </script>
+  <!-- 
+    1. web components 基础认识
+    2. 组件库相关基础知识
+      - 文档站点
+      - core code
+      - 单元测试
+      - 发布部署
+      - 版本管控
+      - 包管理
+    3. 任务分配
+
+
+
+   -->
 </html>
