--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <style></style>
 
   <body>
-    <wheat-button id="open" type="line">
+    <!-- <wheat-button id="open" type="line">
       打开弹框
-    </wheat-button>
+    </wheat-button> -->
     <wheat-button onclick="showModal()" id="open" type="line">
       打开弹框
     </wheat-button>
@@ -24,7 +24,7 @@
         自定义弹框内容2
       </div>
     </wheat-modal>
-    <wheat-input></wheat-input>
+    <!-- <wheat-input></wheat-input> -->
   </body>
   <script>
     const MyModalDom = document.querySelector('wheat-modal')
