feat: 回撤误删的index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <input type="radio" name='test' checked>
     <input type="radio" name='test' value="radioval">
     <input type="radio" id="myradio" name='test' disabled  checked value="radioval"> -->
-  <script src="wheat.ui.min.js"></script><script src="button.js"></script><script src="card.js"></script><script src="input.js"></script><script src="modal.js"></script><script src="radio.js"></script><script src="table.js"></script><script src="wheat.ui.min.js"></script><script src="button.js"></script><script src="card.js"></script><script src="input.js"></script><script src="modal.js"></script><script src="radio.js"></script><script src="table.js"></script></body>
+  <script src="wheat.ui.min.js"></script><script src="button.js"></script><script src="card.js"></script><script src="input.js"></script><script src="modal.js"></script><script src="radio.js"></script><script src="table.js"></script></body>
   <!-- <script>
     var radioval = '';
     const dom = document.getElementById('testradio')
